# njit_rl_team_prj

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  test_kg_integration.py
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
ckpt/curriculum/vectordb/: chroma.sqlite3
ckpt/skill/vectordb/: chroma.sqlite3
scripts/: run_voyager.py  skill_lib_ablation.py
skill_library/rob_trial1/: completed_tasks.json  failed_tasks.json  item_discovery.csv
skill_library/rob_trial1/skill/: skills.json
skill_library/rob_trial1/skill/code/: collectFiveSugarCane.js  cookOnePorkchop.js  cookThreePorkchops.js  craftBucket.js  craftDiamondPickaxe.js  craftFourOakPlanks.js  craftFourSticks.js  craftFurnace.js  craftIronHelmet.js  craftIronLeggings.js  craftIronSwordRobust.js  craftOneClock.js  (+44 more)
skill_library/rob_trial2/: completed_tasks.json  failed_tasks.json  item_discovery.csv
skill_library/rob_trial2/skill/: skills.json
skill_library/rob_trial3/: completed_tasks.json  failed_tasks.json  item_discovery.csv
skill_library/rob_trial3/skill/: skills.json
tests/: __init__.py  test_kg_learning.py
utils/: watsonx.py
voyager/: voyager.py
voyager/agents/: README.md  __init__.py  action.py  critic.py  curriculum.py  knowledge_graph.py  seed_data.json  skill.py
voyager/control_primitives/: README.md  craftItem.js
voyager/control_primitives_context/: README.md
voyager/env/: README.md  bridge.py
voyager/env/mineflayer/: index.js  package.json
voyager/prompts/: README.md
voyager/utils/: README.md  __init__.py  plot_discoveries.py  watsonx.py
(+266 files in other folders)
